# poyuterm

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  makefile  shell.nix
src/: main  main.cpp  makefile
src/controllers/: activePiece.cpp  activePiece.hpp  gameManager.cpp  gameManager.hpp  gridListener.cpp  gridTools.cpp  gridTools.hpp  inputsListener.cpp  inputsListener.hpp  menuListener.cpp  parser.cpp  parser.hpp  puyo.cpp  tetrix.cpp
src/controllers/io/: parser.cpp  parser.hpp  serializer.cpp  serializer.hpp
src/controllers/listeners/: gridListener.cpp  inputsListener.cpp  inputsListener.hpp  menuListener.cpp
src/controllers/solver/: solverManager.cpp  solverManager.hpp
src/domains/: gameData.cpp  gameData.hpp  grid.cpp  grid.hpp
src/game/: game.cpp  game.h  game.hpp
src/grid/: grid.cpp  grid.hpp
src/models/: gameData.cpp  gameData.hpp  grid.cpp  grid.hpp  puyo.cpp  puyo.hpp
src/views/: display.cpp  display.hpp  gamescreen.cpp  gamescreen.hpp  menu.cpp  menu.hpp  menuscreen.cpp  menuscreen.hpp  screen.cpp  screen.hpp
src/views/menu/: menugameover.cpp  menuscreen.cpp  menuscreen.hpp  menustart.cpp
src/views/music/: music.cpp  music.hpp
tests/: activePiece.cpp  fail.cpp  gameData.cpp  grid.cpp  gridTools.cpp  grid_gravity.cpp  inputs.cpp
tests/controllers/: activePiece.cpp  gameManager.cpp  gridTools.cpp
tests/controllers/io/: parser.cpp  serializer.cpp
tests/controllers/solver/: solverManager.cpp
tests/inputs/: example_ia.txt  example_simulation.txt
tests/models/: gameData.cpp  puyo.cpp
